# SimFlow

./: .gitignore  CMakeLists.txt  Makefile  README.md  esp_idf_project_configuration.json  sdkconfig.defaults  sdkconfig_ci  sf_partitions_table.csv
.ci/: docker-compose.yml  mosquitto.conf  mqtt_password_file
.github/workflows/: build.yml  integration_tests.yml
components/sf_cron_job/: cron.c
components/sf_device/: CMakeLists.txt  sf_device.c
components/sf_eth/: CMakeLists.txt  sf_eth.c  sf_eth.h
components/sf_files/: CMakeLists.txt  sf_files.c  sf_files.h
components/sf_gpio/: CMakeLists.txt  sf_gpio.c  sf_gpio.h  sf_gpio_cfg.h
components/sf_time/: CMakeLists.txt  sf_time.c  sf_time.h
components/sf_timer/: CMakeLists.txt  sf_timer.c  sf_timer.h
components/sf_wifi/: CMakeLists.txt  sf_wifi.c  sf_wifi.h
device/sf_watering/: CMakeLists.txt  sf_watering.c  sf_watering_hi.c  sf_watering_hi.h  sf_watering_scheduler.c  sf_watering_scheduler.h
device/sf_watering/include/: sf_watering.h
device/sf_watering/watering_app/: SimFlow_HLD.md  integration_guide.md
device/sf_watering/watering_app/backend/: backend.py  schedules.json  sf_watering_mqtt_client.py  sf_watering_py_tester.py
device/sf_watering/watering_app/frontend/: package-lock.json  package.json
device/sf_watering/watering_app/frontend/src/: App.jsx
device/sf_watering/watering_app/mqtt_watering_py_client/: new_imp.py  sf_watring_mqtt_client.py
device/sf_watering/watering_app/server/: backend.py  requirements.txt  sf_watering_mqtt_client.py  sf_watering_py_tester.py
device/sf_watering/watering_app/server/tests/: Dockerfile.test  PYTEST_GUIDE.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_mqtt_client.py
device/sf_watering/watering_app/webui/: index.html  package-lock.json  package.json
device/sf_watering/watering_app/webui/public/: README_LOGO.txt
device/sf_watering/watering_app/webui/src/: App.jsx  App.test.jsx
device/sf_watering/watering_fw/: sf_watering.c  sf_watering_hi.c  sf_watering_scheduler.c  sf_watering_scheduler.h
include/: sf_device.h  sf_err.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
sf_fatfs/sf_watering/: sfHelloFile.txt
